Preprocessing removing pads and eos done

--- a/Idea_Generator.ipynb
+++ b/Idea_Generator.ipynb
@@ -6,7 +6,7 @@
       "name": "Idea_Generator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9hXjtm6tg+VPBup16N88B",
+      "authorship_tag": "ABX9TyPGJEVutQHDj+P4wGqZFgcX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "7bYa3pQi_QfF",
-        "outputId": "35c1b69c-1db4-4347-febd-2567e37d3dc7",
+        "outputId": "5b4d8534-85ad-47ce-a556-cf7a049838db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,12 +40,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -70,14 +70,16 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import keras\n",
+        "import itertools\n",
         "from sklearn.model_selection import train_test_split\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Dropout, LSTM, Embedding, Bidirectional\n",
         "from keras.optimizers import Adam\n",
         "from keras.preprocessing.text import Tokenizer\n",
+        "from keras.preprocessing.sequence import pad_sequences\n",
         "from keras.utils.np_utils import to_categorical  "
       ],
-      "execution_count": 34,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -93,7 +95,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "WVLdVrED_zpN",
-        "outputId": "a8643528-9ff3-4e9e-d959-f29a4fbf038e",
+        "outputId": "d5643df1-ded2-45ab-c386-b0f266663d49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -104,7 +106,7 @@
         "    data = pickle.load(f)\n",
         "print(data)"
       ],
-      "execution_count": 25,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +130,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oOOqby6VNjxm",
-        "outputId": "b1da018d-3928-49c5-c5b8-78dc8bb0bb46",
+        "outputId": "5a0a9ada-a703-4064-f9a7-840a3eece7ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -140,7 +142,7 @@
         "\n",
         "print(labels)"
       ],
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +166,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "3JgC9Dhf_w3u",
-        "outputId": "9a5b61ea-f7e7-4013-c25e-9e9c90361571",
+        "outputId": "61b294b8-c6a9-4f8e-ab1b-88279fc33adf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -175,7 +177,7 @@
         "    test_data = pickle.load(f)\n",
         "print(test_data)"
       ],
-      "execution_count": 27,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +201,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "DpazL6T9_47e",
-        "outputId": "d83ab972-33a4-4d6b-b211-f1fbc5cf971d",
+        "outputId": "c862cf0f-2ebb-4f2b-ec9a-3820fb3a2f98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -211,7 +213,7 @@
         "\n",
         "print(test_labels)"
       ],
-      "execution_count": 28,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,8 +254,32 @@
         "\n",
         "# print(data)"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YvpRIjACw1g0",
+        "outputId": "96b65b49-2cde-4228-d722-952dd052e176",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(type(data[0][0][17]))"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'str'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -266,13 +292,19 @@
         "  processed_label=[]\n",
         "  for i in range(0,len(data)):\n",
         "    for j in range(0,len(data[i])):\n",
-        "      text=data[i][j]\n",
-        "      label=labels[i][j]\n",
-        "      processed_data.append(text)\n",
-        "      processed_label.append(label)\n",
+        "      intermediate_data=[]\n",
+        "      intermediate_label=[]\n",
+        "      for k in range(0,len(data[i][j])):\n",
+        "        text=data[i][j][k]\n",
+        "        if text != '<eos>'and text!='<pad>':\n",
+        "          intermediate_data.append(text)\n",
+        "      processed_data.append(intermediate_data)\n",
+        "  for i in labels:\n",
+        "    for j in i:\n",
+        "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -284,8 +316,56 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "msGQqpW7BIpp",
+        "outputId": "bd622087-a485-4640-9050-53a0d3ef801b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(len(processed_label))"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4699\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sEWHeuWavLqd",
+        "outputId": "01f71bc8-5678-4544-ff08-7e0550e7fa61",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print((processed_data[0]))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['thank', 'you', 'for', 'calling', 'sprint', '.', 'we', 'care', 'about', 'everybody', '.', 'how', 'can', 'i', 'help', 'you', '?']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -297,10 +377,11 @@
         "  t = Tokenizer()\n",
         "  t.fit_on_texts(processed_data)\n",
         "  X = t.texts_to_matrix(processed_data, mode='tfidf')\n",
+        "  X = pad_sequences(X)\n",
         "  Y = to_categorical(processed_label, num_classes=6)\n",
         "  return X,Y"
       ],
-      "execution_count": 31,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -312,8 +393,32 @@
         "X,Y = Tokenize(processed_data, processed_label)\n",
         "test_X , test_Y = Tokenize(test_processed_data,test_processed_label)"
       ],
-      "execution_count": 32,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hoRkpaKwBckV",
+        "outputId": "9527a7dd-fd74-44f6-98fb-4d96ed1de73d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(len(X[0]))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2418\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -328,7 +433,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "FVOj_vZa9QY-",
-        "outputId": "afec5301-a1dd-4697-e5b4-8d8983b91a7f",
+        "outputId": "ea0c7101-2f13-4150-a675-cf6f9351894f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -344,20 +449,20 @@
         "model.compile(loss = 'categorical_crossentropy', optimizer='adam',metrics = ['accuracy'])\n",
         "print(model.summary())"
       ],
-      "execution_count": 39,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_6\"\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding_6 (Embedding)      (None, 2420, 128)         320000    \n",
+            "embedding (Embedding)        (None, 2418, 128)         320000    \n",
             "_________________________________________________________________\n",
-            "bidirectional_2 (Bidirection (None, 400)               526400    \n",
+            "bidirectional (Bidirectional (None, 400)               526400    \n",
             "_________________________________________________________________\n",
-            "dense_5 (Dense)              (None, 6)                 2406      \n",
+            "dense (Dense)                (None, 6)                 2406      \n",
             "=================================================================\n",
             "Total params: 848,806\n",
             "Trainable params: 848,806\n",
@@ -373,10 +478,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fup010SF_SjA",
-        "outputId": "ff40d03e-6eff-454c-a4e6-ea56a106fc22",
+        "outputId": "c3310e91-693b-4084-c5fd-9d4901f1bac2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 370
+          "height": 50
         }
       },
       "source": [
@@ -384,45 +489,15 @@
         "score,acc=model.evaluate(test_X,test_Y,verbose=2)\n",
         "print(\"Accuracy : \"+ str(acc))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "147/147 [==============================] - 36s 248ms/step - loss: 1.7272 - accuracy: 0.2662\n",
-            "Epoch 2/10\n",
-            "147/147 [==============================] - 37s 248ms/step - loss: 1.7225 - accuracy: 0.2722\n",
-            "Epoch 3/10\n",
-            "147/147 [==============================] - 37s 249ms/step - loss: 1.7200 - accuracy: 0.2611\n",
-            "Epoch 4/10\n",
-            "147/147 [==============================] - 37s 250ms/step - loss: 1.7166 - accuracy: 0.2715\n",
-            "Epoch 5/10\n",
-            "147/147 [==============================] - 37s 253ms/step - loss: 1.7139 - accuracy: 0.2713\n",
-            "Epoch 6/10\n",
-            "147/147 [==============================] - 37s 254ms/step - loss: 1.7123 - accuracy: 0.2660\n",
-            "Epoch 7/10\n",
-            "147/147 [==============================] - 37s 255ms/step - loss: 1.7092 - accuracy: 0.2732\n",
-            "Epoch 8/10\n",
-            "147/147 [==============================] - 37s 254ms/step - loss: 1.7067 - accuracy: 0.2745\n",
-            "Epoch 9/10\n",
-            "147/147 [==============================] - 38s 256ms/step - loss: 1.7014 - accuracy: 0.2745\n",
-            "Epoch 10/10\n",
-            "147/147 [==============================] - 38s 262ms/step - loss: 1.7774 - accuracy: 0.2560\n"
+            " 52/147 [=========>....................] - ETA: 26s - loss: 1.7292 - accuracy: 0.2530"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fbb6c206ac8>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 40
         }
       ]
     }
