Fixing Resource not available error

--- a/ELMo_on_IEMOCAP_for_ERC.ipynb
+++ b/ELMo_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ELMo on IEMOCAP for ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcCqXWsJiyPyec/tWV3mUj",
+      "authorship_tag": "ABX9TyOw8mGjnBJ9bP/OfKFK8QRA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -269,8 +269,42 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qNyBjIg5hz2s"
+      },
+      "source": [
+        "def create_batches(data):\n",
+        "  count=0\n",
+        "  temp=[]\n",
+        "  batches=[]\n",
+        "  for i in data:\n",
+        "    count=count+1\n",
+        "    temp.append(i)\n",
+        "    if count%100==0:\n",
+        "      count=0\n",
+        "      batches.append(temp)\n",
+        "      temp=[]\n",
+        "  return batches"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6KsISTFvjmti"
+      },
+      "source": [
+        "list_train = create_batches(processed_data)\n",
+        "list_test = create_batches(test_processed_data)"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "zSaGSgzLc19f",
-        "outputId": "83395f5f-16ab-47e2-ca68-f74046fa794f",
+        "outputId": "7081655d-7b2c-48dc-8fe7-b2d7af39ffe3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -296,6 +330,25 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IZoNfn2ggrBD"
+      },
+      "source": [
+        "# save elmo_train_new\n",
+        "pickle_out = open(\"elmo_train_03032019.pickle\",\"wb\")\n",
+        "pickle.dump(elmo_train_new, pickle_out)\n",
+        "pickle_out.close()\n",
+        "\n",
+        "# save elmo_test_new\n",
+        "pickle_out = open(\"elmo_test_03032019.pickle\",\"wb\")\n",
+        "pickle.dump(elmo_test_new, pickle_out)\n",
+        "pickle_out.close()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
